[change] path to static and media files

--- a/config/nginx/conf.d/local.conf
+++ b/config/nginx/conf.d/local.conf
@@ -15,10 +15,12 @@ server {
     }
 
     location /static/ {
-        alias /opt/services/djangoapp/www/static/;
+        alias /opt/services/django_app/src/www/static/;
+        access_log off;
     }
 
     location /media/ {
-        alias /opt/services/djangoapp/www/media/;
+        alias /opt/services/django_app/src/www/media/;
+        access_log off;
     }
 }
